--- a/Cooking_app/static/css/common/header.css
+++ b/Cooking_app/static/css/common/header.css
@@ -18,7 +18,6 @@
 #right-header{
   flex: 1;
 
-  height: 100%;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -81,14 +80,14 @@
 }
 
 /* Right */
-.container-11{
+#container-11{
   visibility: visible;
 } 
-.container-10{
+#container-10{
   visibility: hidden;
 }
 
-.container-11, .container-10{
+#container-11, #container-10{
   height: 100%;
   position: absolute;
   display: flex;
@@ -141,7 +140,7 @@
 #JoinUsButton2{
   padding: 7.5px 10px 7.5px 10px;
   border: 2px solid black;
-  margin-right: 50px;
+  
   border-radius: 20px;
   background-color:white;
   cursor: pointer;
@@ -162,12 +161,12 @@
   position: absolute;
   opacity: 0;
   top: 0;
-  right: -20px;
+  right: -10px;
   transition: 0.5s;
 }
 
 #JoinUsButton2:hover span{
-  padding-right: 20px;
+  padding-right: 10px;
   color: white;
 
 }
@@ -177,18 +176,13 @@
 
 #JoinUsButton2:hover span:after{
   opacity: 1;
-  right: 0;
+  right: -5px;
 }
 
 #JoinUsButton2:active{
   opacity: 0.8;
 }
 
-.text-location{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  
-}
+
 
 
