--- a/Cooking_app/templates/post_a_recipe.html
+++ b/Cooking_app/templates/post_a_recipe.html
@@ -1,3 +1,5 @@
+{{% load static %}}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,12 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Martian+Mono:wght@300;400;500;600&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,300&family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' %]">
 
-  <link rel="stylesheet" href="css/common/header.css">
-  <link rel="stylesheet" href="css/common/sidebar.css">
-  <link rel="stylesheet" href="css/common/general.css">
-  <link rel="stylesheet" href="css/post_a_recipe/main.css">
+  <link rel="stylesheet" href="{% static 'css/common/header.css' %]">
+  <link rel="stylesheet" href="{% static 'css/common/sidebar.css' %]">
+  <link rel="stylesheet" href="{% static 'css/common/general.css' %]">
+  <link rel="stylesheet" href="{% static 'css/post_a_recipe/main.css' %]">
 
   <title>Post a recipe</title>
 
@@ -21,37 +23,50 @@
   <!-- Header -->
   <header id = "header">
     <div id = "left-header">
-      <img id = "icon-nav"  onclick="openNav()" src="/icons/nav.png" alt="nav">
+      <img id = "icon-nav"  onclick="openNav()" src="{% static '/icons/nav.png' %}" alt="nav">
       <a href="index.html">
-        <img id = "logo-img2" src="/images/logo2.png" alt="">
+        <img id = "logo-img2" src="{% static '/images/logo2.png' %}" alt="">
       </a>
     </div>
 
     <div id = "middle-header">
-      <input id = "header-search" type="text" placeholder="Search recipes">
+
+      <!-- HEADER SEARCH -->
+      <form action="/search.html">
+        <input id = "header-search" 
+        name = "header-search"
+        type="text" 
+        placeholder="Search recipes"
+        >
+        <input type="submit" style="display:none"/>
+      </form>
 
       <button id = "search-btn-header" onclick="openSearchOnHeader()">
-        <img id = "search-icon-header" src="/icons/search.png" alt="Search-icon">
+        <img id = "search-icon-header" src="{% static '/icons/search.png' %}" alt="Search-icon">
       </button>
     </div>
 
     <div id = "right-header">
-      <div class = "container-10">
+      <div id = "container-10">
         <button id = "JoinUsButton2">
           <span>
             Log In / Sign Up
           </span>
         </button>
       </div>
-      <div class = "container-11">
+      <div id = "container-11">
         <div class = "dropdown">
           <span class = "username-header" onclick="displayDropdown()">Hoang Phu</span>
-          <img class = "profile-header" onclick="displayDropdown()" src="icons/user.png" alt="">
+          <img class = "profile-header" onclick="displayDropdown()" src="{% static '/icons/user.png' %}" alt="">
           <div id="my-dropdown" class="dropdown-content">
-            <a href="#">Profile</a>
-            <a href="#">Saved Recipes</a>
-            <a href="#">Settings</a>
-            <a href="#">Log out</a>
+            <a href="/profile.html">Profile</a>
+              <a href="/profile.html">Saved Recipes</a>
+              <a href="/profile.html">Settings</a>
+              <a href="/login.html" 
+                  onclick="return logout();"
+              >
+                  Log out
+              </a>
           </div>
         </div>
       </div>
@@ -65,24 +80,24 @@
     <!-- Logo website container -->
     <div class = "logo-container">
       <a class = "logo-a" href="index.html">
-        <img class = "logo-img" src="/images/logo.png" alt="">
+        <img class = "logo-img" src="{% static '/images/logo.png' %}" alt="">
       </a>
     </div>
 
     <!-- Sidebar main  -->
     <div class = "sidebar-main"> 
 
-      <div class = "container-0">
-        <div class = "container-00">
+      <div id = "container-0">
+        <div id = "container-00">
           <button id = "JoinUsButton">
             <span>
               Join Us
             </span>
         </button>
         </div>
-        <div class = "container-01">
+        <div id = "container-01">
           <a href="#">
-            <img src="/icons/user.png" alt="">
+            <img src="{% static '/icons/user.png' %}" alt="">
             <p>Hoang Phu</p>
           </a>
         </div>
@@ -90,47 +105,47 @@
 
       <p style="min-height: 10px;"></p>
         <div class = "sidebar-main-item">
-            <img id = "home-icon" src="/icons/home.png" alt="">
+            <img id = "home-icon" src="{% static '/icons/home.png' %}" alt="">
             <span>My Feeds</span>
         </div>
 
         <div class = "sidebar-main-item">
-          <img id = "plan-icon" src="/icons/plan.png" alt="">
+          <img id = "plan-icon" src="{% static '/icons/plan.png' %}" alt="">
           <span>Meal Planner</span>
         </div>
 
         <div id = "sidebar-main-item-saved-recipes">
           <div id = "saved-recipes">
-            <img src="/icons/saved.png" alt="">
+            <img src="{% static '/icons/saved.png' %}" alt="">
             <span>Saved Recipes</span>
           </div>
           <div class = "saved-recipes-collection">
-            <img src="/icons/folder.png" alt="">
+            <img src="{% static '/icons/folder.png' %}" alt="">
             <span>All Recipes</span>
           </div>
 
           <div class = "saved-recipes-collection">
-            <img src="/icons/folder.png" alt="">
+            <img src="{% static '/icons/folder.png' %}" alt="">
             <span>Breakfasts</span>
           </div>
 
           <div class = "saved-recipes-collection">
-            <img src="/icons/folder.png" alt="">
+            <img src="{% static '/icons/folder.png' %}" alt="">
             <span>Dessert</span>
           </div>
 
           <div class = "saved-recipes-collection">
-            <img src="/icons/folder.png" alt="">
+            <img src="{% static '/icons/folder.png' %}" alt="">
             <span>Dinners</span>
           </div>
 
           <div class = "saved-recipes-collection">
-            <img src="/icons/folder.png" alt="">
+            <img src="{% static '/icons/folder.png' %}" alt="">
             <span>Drinks</span>
           </div>
 
           <div class = "saved-recipes-collection">
-            <img src="/icons/folder.png" alt="">
+            <img src="{% static '/icons/folder.png' %}" alt="">
             <span>Soups</span>
           </div>
 
@@ -211,7 +226,7 @@
           width: 200px;
           height: auto;
         " 
-        src="/images/logo_noname.png">
+        src="{% static '/images/logo_noname.png' %}">
         <!-- Display when post successfully -->
         <div id =  "div1">
           <p id = "thank-you-p">
@@ -220,7 +235,7 @@
           <p id = "post-successfully-p">
             Your recipe was successfully published.
           </p>
-          <button id = "back-to-home-btn">
+          <button id = "back-to-home-btn" onclick = "toHomepage()">
             <i 
             style=
             "
@@ -245,14 +260,15 @@
           <p style="height: 30px;">
 
           </p>
-          <form class = "form-recipe" action="">
+          <!-- Form -->
+          <form id = "form-recipe" >
             <input 
             name = "title-recipe" 
             id = "title-recipe" 
             type="text" placeholder="Title (Name your recipe)" 
             class = "input-recipe">
 
-            <textarea name="decription-recipe" id="decription-recipe" 
+            <textarea name="description-recipe" id="description-recipe" 
             cols="30" rows="10"
             class = "text-area-input"
             placeholder="Please share your inspirations for this recipe."
@@ -303,11 +319,17 @@
               Intructions
             </p>
             <div id = "instructions" class = "flex-container">
-              <textarea name="instruction0" id="instruction0" cols="30" rows="3" class = "text-area-input"
-              placeholder="Preheat the broiler to high and position the rack 8 inches from the heat."
+              <textarea name="instruction0" 
+                    id="instruction0" 
+                    cols="30" rows="3" 
+                    class = "text-area-input"
+                    placeholder="Preheat the broiler to high and position the rack 8 inches from the heat."
               ></textarea>
-              <textarea name="instruction1" id="instruction1" cols="30" rows="3" class = "text-area-input"
-              placeholder="Bring a large pot of water to a boil.  Salt the boiling water and cook the pasta al dente."
+              <textarea name="instruction1" 
+                  id="instruction1" 
+                  cols="30" rows="3" 
+                  class = "text-area-input"
+                  placeholder="Bring a large pot of water to a boil.  Salt the boiling water and cook the pasta al dente."
               ></textarea>
             </div>
             <button 
@@ -338,9 +360,13 @@
               </span>
             </button>
 
-            <button class = "submit-btn">
+            <button 
+                    type="button" 
+                    id = "submit-btn" 
+                    onclick="post()"
+            >
               Post
-              <img src="/icons/paper-plane.png" alt="">
+              <img src="{% static '/icons/paper-plane.png' %}" alt="">
             </button>
 
           </form>
@@ -354,18 +380,30 @@
           height: 50px;
           align-self: center;
           " 
-          src="/images/cooking.png" alt="">
+          src="{% static '/images/cooking.png' %}" alt="">
         <div style="height: 50px;"></div>
   </main>
 
   <script>
     closeNav();
+    if (localStorage.getItem('isPostSubmitted') == 'no' ||     
+        localStorage.getItem('isPostSubmitted') === null){
+          document.getElementById('div1').style.display = "none";
+          document.getElementById('div2').style.display = "flex";
+        }
+    else{
+      document.getElementById('div1').style.display = "flex";
+      document.getElementById('div2').style.display = "none";
+      localStorage.setItem('isPostSubmitted', 'no');
+    }
+
     window.onclick = function(event) {
       if (!event.target.matches('.username-header') && !event.target.matches('.profile-header')) {
         if (document.getElementById("my-dropdown").style.display == "block"){
           document.getElementById("my-dropdown").style.display = "none";
         }
       }
+     
     }
 
     function closeNav() {
@@ -448,6 +486,20 @@
       }   
       document.getElementById(elementId).appendChild(element); 
     }
+
+    function post(){
+      localStorage.setItem('isPostSubmitted', 'yes');
+      document.getElementById('form-recipe').submit();
+    }
+
+    function toHomepage(){
+      window.location.href = '/index.html';
+    }
+
+    function logout(){
+      localStorage.setItem('login', 'no');
+      return true;
+  }
   </script>
 </body>
 </html>
