--- a/Cooking_app/static/css/profile/main.css
+++ b/Cooking_app/static/css/profile/main.css
@@ -36,7 +36,7 @@
   border-radius: 200px;
   position: relative;
   border: 1px lavender solid;
-  background: url('/icons/user.png') no-repeat center;
+  background: url('/static/icons/user.png') no-repeat center;
   background-size: 100%;
 }
 
@@ -50,9 +50,9 @@
 }
 #open-file-img:hover{
   background:
-  url('/icons/icons8-camera-96.png') no-repeat center,
+  url('/static/icons/icons8-camera-96.png') no-repeat center,
   radial-gradient(ellipse farthest-corner at 45px 45px, rgba(50, 50, 50, 0.1) 0%, rgba(80, 80, 80, 0.1) )no-repeat center,
-  url('/icons/user.png') no-repeat center;
+  url('/static/icons/user.png') no-repeat center;
   
   background-size: 75%, 100%, 100%;
 }
@@ -241,42 +241,42 @@
 
 #facebook{
   opacity: 0.5;
-  background-image: url('/icons/facebook.png');
+  background-image: url('/static/icons/facebook.png');
 }
 
 #facebook:hover{
   opacity: 1;
-  background-image: url('/icons/facebook-hover.png');
+  background-image: url('/static/icons/facebook-hover.png');
 }
 
 #twitter{
   opacity: 0.5;
-  background-image: url('/icons/twitter.png');
+  background-image: url('/static/icons/twitter.png');
 }
 
 #twitter:hover{
   opacity: 1;
-  background-image: url('/icons/twitter-hover.png');
+  background-image: url('/static/icons/twitter-hover.png');
 }
 
 #instagram{
   opacity: 0.5;
-  background-image: url('/icons/instagram.png');
+  background-image: url('/static/icons/instagram.png');
 }
 
 #instagram:hover{
   opacity: 1;
-  background-image: url('/icons/instagram-hover.png');
+  background-image: url('/static/icons/instagram-hover.png');
 }
 
 #pinterest{
   opacity: 0.5;
-  background-image: url('/icons/pinterest.png');
+  background-image: url('/static/icons/pinterest.png');
 }
 
 #pinterest:hover{
   opacity: 1;
-  background-image: url('/icons/pinterest-hover.png');
+  background-image: url('/static/icons/pinterest-hover.png');
 }
 
 .editing-container{
@@ -793,7 +793,7 @@ input:focus{
 
 .saved-recipe-checkbox input[type="checkbox"] + label
 {
-  background: url('/icons/saved-hover.png') no-repeat center;
+  background: url('/static/icons/saved-hover.png') no-repeat center;
   background-size: 100%;
   height: 24px;
   width: 24px;
@@ -803,7 +803,7 @@ input:focus{
 
 .saved-recipe-checkbox input[type="checkbox"]:checked + label
 {
-  background: url('/icons/saved.png') no-repeat center;
+  background: url('/static/icons/saved.png') no-repeat center;
   background-size: 100%;
   height: 24px;
   width: 24px;
